<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".view.CadastrarDespesaFragment">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border2"
        android:gravity="center_horizontal"
        android:text="@string/lancar_despesas"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:enabled="true"
        android:hint="@string/data"
        android:inputType="datetime"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/et_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <EditText
        android:id="@+id/et_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:enabled="true"
        android:hint="@string/local"
        android:inputType="text"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_data"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/et_preco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_data" />

    <EditText
        android:id="@+id/et_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/purple_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_nome"
        app:layout_constraintTop_toBottomOf="@id/et_local" />

    <Button
        android:id="@+id/bt_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nome" />

</androidx.constraintlayout.widget.ConstraintLayout>